Fixed warnings and stopped Project overview from auto scrolling on mobile devices

--- a/src/components/main/overview/Home.css
+++ b/src/components/main/overview/Home.css
@@ -56,7 +56,7 @@
     .project-wrapper {
         width: 95vw;
         /*margin-left: 2.5vw;*/
-        padding: 0;
+        padding: 0 0 12px;
     }
     .overviewHeader{
         font-size: 34px;
